使用宏将vs项目属性的中间目录、输出目录、输出文件名进行批量修改。使生成文件分别位于bin/ tmp/。便于管理

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
-
-
 .vs/
 .git/
-
 
 
 *.svn
@@ -19,3 +16,19 @@
 *.exp
 *.res
 *.idb
+
+# Build results
+[Bb]in/
+[Ll]ibs/
+[Tt]mp/
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+[Aa][Rr][Mm]/
+[Aa][Rr][Mm]64/
+bld/
+[Oo]bj/
+[Ll]og/
