--- a/DuiScript/DuiScript2022.vcxproj
+++ b/DuiScript/DuiScript2022.vcxproj
@@ -242,99 +242,99 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>Lib\</OutDir>
-    <TargetName>DuiScript_d</TargetName>
-    <IntDir>.\Build\Debug\</IntDir>
+    <OutDir>..\libs\</OutDir>
+    <TargetName>$(RootNameSpace)_$(PlatformTarget)_$(Configuration)</TargetName>
+    <IntDir>$(ProjectDir)..\tmp\$(RootNamespace)\$(PlatformTarget)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <TargetName>DuiScript_64d</TargetName>
+    <TargetName>$(RootNameSpace)_$(PlatformTarget)_$(Configuration)</TargetName>
     <LinkIncremental>true</LinkIncremental>
-    <IntDir>.\Build\x64\Debug\</IntDir>
-    <OutDir>Lib\</OutDir>
+    <IntDir>$(ProjectDir)..\tmp\$(RootNamespace)\$(PlatformTarget)\$(Configuration)\</IntDir>
+    <OutDir>..\libs\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='xsDebug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>Lib\</OutDir>
-    <TargetName>DuiScript_sd</TargetName>
-    <IntDir>.\Build\xsDebug\</IntDir>
+    <OutDir>..\libs\</OutDir>
+    <TargetName>$(RootNameSpace)_$(PlatformTarget)_$(Configuration)</TargetName>
+    <IntDir>$(ProjectDir)..\tmp\$(RootNamespace)\$(PlatformTarget)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='xsDebug|x64'">
-    <TargetName>DuiScript_64sd</TargetName>
+    <TargetName>$(RootNameSpace)_$(PlatformTarget)_$(Configuration)</TargetName>
     <LinkIncremental>true</LinkIncremental>
-    <IntDir>.\Build\x64\xsDebug\</IntDir>
-    <OutDir>Lib\</OutDir>
+    <IntDir>$(ProjectDir)..\tmp\$(RootNamespace)\$(PlatformTarget)\$(Configuration)\</IntDir>
+    <OutDir>..\libs\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='UnicodeDebug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>Lib\</OutDir>
-    <TargetName>DuiScript_ud</TargetName>
-    <IntDir>.\Build\Debug_u\</IntDir>
+    <OutDir>..\libs\</OutDir>
+    <TargetName>$(RootNameSpace)_$(PlatformTarget)_$(Configuration)</TargetName>
+    <IntDir>$(ProjectDir)..\tmp\$(RootNamespace)\$(PlatformTarget)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='UnicodeDebug|x64'">
-    <TargetName>DuiScript_64ud</TargetName>
+    <TargetName>$(RootNameSpace)_$(PlatformTarget)_$(Configuration)</TargetName>
     <LinkIncremental>true</LinkIncremental>
-    <IntDir>.\Build\x64\Debug_u\</IntDir>
-    <OutDir>Lib\</OutDir>
+    <IntDir>$(ProjectDir)..\tmp\$(RootNamespace)\$(PlatformTarget)\$(Configuration)\</IntDir>
+    <OutDir>..\libs\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='xsUnicodeDebug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>Lib\</OutDir>
-    <TargetName>DuiScript_usd</TargetName>
-    <IntDir>.\Build\xsDebug_u\</IntDir>
+    <OutDir>..\libs\</OutDir>
+    <TargetName>$(RootNameSpace)_$(PlatformTarget)_$(Configuration)</TargetName>
+    <IntDir>$(ProjectDir)..\tmp\$(RootNamespace)\$(PlatformTarget)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='xsUnicodeDebug|x64'">
-    <TargetName>DuiScript_64usd</TargetName>
+    <TargetName>$(RootNameSpace)_$(PlatformTarget)_$(Configuration)</TargetName>
     <LinkIncremental>true</LinkIncremental>
-    <IntDir>.\Build\x64\xsDebug_u\</IntDir>
-    <OutDir>Lib\</OutDir>
+    <IntDir>$(ProjectDir)..\tmp\$(RootNamespace)\$(PlatformTarget)\$(Configuration)\</IntDir>
+    <OutDir>..\libs\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>Lib\</OutDir>
-    <TargetName>DuiScript</TargetName>
-    <IntDir>.\Build\Release\</IntDir>
+    <OutDir>..\libs\</OutDir>
+    <TargetName>$(RootNameSpace)_$(PlatformTarget)_$(Configuration)</TargetName>
+    <IntDir>$(ProjectDir)..\tmp\$(RootNamespace)\$(PlatformTarget)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <TargetName>DuiScript_64</TargetName>
+    <TargetName>$(RootNameSpace)_$(PlatformTarget)_$(Configuration)</TargetName>
     <LinkIncremental>false</LinkIncremental>
-    <IntDir>.\Build\x64\Release\</IntDir>
-    <OutDir>Lib\</OutDir>
+    <IntDir>$(ProjectDir)..\tmp\$(RootNamespace)\$(PlatformTarget)\$(Configuration)\</IntDir>
+    <OutDir>..\libs\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='xsRelease|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>Lib\</OutDir>
-    <TargetName>DuiScript_s</TargetName>
-    <IntDir>.\Build\xsRelease\</IntDir>
+    <OutDir>..\libs\</OutDir>
+    <TargetName>$(RootNameSpace)_$(PlatformTarget)_$(Configuration)</TargetName>
+    <IntDir>$(ProjectDir)..\tmp\$(RootNamespace)\$(PlatformTarget)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='xsRelease|x64'">
-    <TargetName>DuiScript_64s</TargetName>
+    <TargetName>$(RootNameSpace)_$(PlatformTarget)_$(Configuration)</TargetName>
     <LinkIncremental>false</LinkIncremental>
-    <IntDir>.\Build\x64\xsRelease\</IntDir>
-    <OutDir>Lib\</OutDir>
+    <IntDir>$(ProjectDir)..\tmp\$(RootNamespace)\$(PlatformTarget)\$(Configuration)\</IntDir>
+    <OutDir>..\libs\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='UnicodeRelease|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>Lib\</OutDir>
-    <TargetName>DuiScript_u</TargetName>
-    <IntDir>.\Build\Release_u\</IntDir>
+    <OutDir>..\libs\</OutDir>
+    <TargetName>$(RootNameSpace)_$(PlatformTarget)_$(Configuration)</TargetName>
+    <IntDir>$(ProjectDir)..\tmp\$(RootNamespace)\$(PlatformTarget)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='UnicodeRelease|x64'">
-    <TargetName>DuiScript_64u</TargetName>
+    <TargetName>$(RootNameSpace)_$(PlatformTarget)_$(Configuration)</TargetName>
     <LinkIncremental>false</LinkIncremental>
-    <IntDir>.\Build\x64\Release_u\</IntDir>
-    <OutDir>Lib\</OutDir>
+    <IntDir>$(ProjectDir)..\tmp\$(RootNamespace)\$(PlatformTarget)\$(Configuration)\</IntDir>
+    <OutDir>..\libs\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='xsUnicodeRelease|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>Lib\</OutDir>
-    <TargetName>DuiScript_us</TargetName>
-    <IntDir>.\Build\xsRelease_u\</IntDir>
+    <OutDir>..\libs\</OutDir>
+    <TargetName>$(RootNameSpace)_$(PlatformTarget)_$(Configuration)</TargetName>
+    <IntDir>$(ProjectDir)..\tmp\$(RootNamespace)\$(PlatformTarget)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='xsUnicodeRelease|x64'">
-    <TargetName>DuiScript_64us</TargetName>
+    <TargetName>$(RootNameSpace)_$(PlatformTarget)_$(Configuration)</TargetName>
     <LinkIncremental>false</LinkIncremental>
-    <IntDir>.\Build\x64\xsRelease_u\</IntDir>
-    <OutDir>Lib\</OutDir>
+    <IntDir>$(ProjectDir)..\tmp\$(RootNamespace)\$(PlatformTarget)\$(Configuration)\</IntDir>
+    <OutDir>..\libs\</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
